--- a/customizations/organization/15493/Progroup Translation/07_PL/Intern/page3.css
+++ b/customizations/organization/15493/Progroup Translation/07_PL/Intern/page3.css
@@ -13,28 +13,28 @@ p.ew-confirmation__organizer-contact > span:nth-of-type(1) {
 }
 
 .ew-confirmation__header .header__label:after {
-    content: "172";
+    content: "Potwierdzenie rejestracji";
 	text-indent: 0;
 	display: block;
 	line-height: normal;
 }
 
 .customization-confirmation-description:after {
-	content: "174";
+	content: "Dziękujemy za zarejestrowanie się. Wkrótce otrzymasz e-mailem potwierdzenie.";
 	text-indent: 0;
 	display: block;
 	line-height: normal;
 }
 
 .ew-confirmation__text-paragraph:after {
-	content: "178";
+	content: "Korzystając z portalu, możesz w każdej chwili przeglądać i zarządzać swoimi danymi. Aby się zalogować, musisz podać swój numer zgłoszeniowy i adres e-mail.";
 	text-indent: 0;
 	display: block;
 	line-height: normal;
 }
 
 .customization-client-portal-link:after {
-    content: "180";
+    content: "Do portalu logowania";
     text-indent: 0;
     display: block;
     line-height: normal;
@@ -42,7 +42,7 @@ p.ew-confirmation__organizer-contact > span:nth-of-type(1) {
 }
 
 p.ew-confirmation__organizer-contact span:nth-of-type(1):after {
-	content: "182";
+	content: "W razie pytań zawsze możesz zwrócić się na adres events@progroup.ag";
 	text-indent: 0;
 	line-height: normal;
 	font-size: 14px;
