--- a/customizations/organization/15493/Progroup Translation/03_CZ/Intern/bookingportal.css
+++ b/customizations/organization/15493/Progroup Translation/03_CZ/Intern/bookingportal.css
@@ -1,5 +1,5 @@
 .booking-editing-auth vv-heading:after{
-    content:"55";
+    content:"Zadej prosím svoje přihlašovací data";
     text-indent: 0;
 	line-height: normal;
 	font-size:16px;
@@ -8,7 +8,7 @@
 }
 
 .booking-editing-auth vv-input[name="bookingId"] label p:after {
-    content:"56";
+    content:"Registrační číslo";
     text-indent: 0;
 	line-height: normal;
 	font-size:16px;
@@ -16,12 +16,12 @@
 }
 
 .booking-editing-auth vv-input[name="bookingId"] + vv-show-errors .error-text:after {
-    content:"Missing 4";
+    content:"Zadejte prosím platné číslo rezervace";
 	font-size:12px;
 }
 
 .booking-editing-auth vv-input[name="email"] label p:after {
-    content:"57";
+    content:"E-mailová adresa";
     text-indent: 0;
 	line-height: normal;
 	font-size:16px;
@@ -29,27 +29,27 @@
 }
 
 .booking-editing-auth vv-input[name="email"] + vv-show-errors .error-text:after {
-    content:"Missing 5";
+    content:"Zadejte prosím platnou e-mailovou adresu";
 	font-size:12px;
 }
 
 .booking-editing-auth vv-button:nth-of-type(1) button:after {
-    content:"58";
+    content:"K výběru";
 	font-size:16px;
 }
 
 .booking-editing-auth vv-button:nth-of-type(2) button:after {
-    content:"59";
+    content:"Dále";
 	font-size:16px;
 }
 
 .customization3_edit-booking_header_title:after{
-    content:"191";
+    content:"Můj rezervační portál";
 	font-size:14px;
 }
 
 .customization3_edit-booking_header_days-to-go vv-text:nth-of-type(1):after{
-    content:"192";
+    content:"JEŠTĚ xxx DNŮ";
     text-indent: 0;
 	line-height: normal;
 	font-size:14px;
@@ -57,7 +57,7 @@
 }
 
 .customization3_edit-booking_header_days-to-go vv-text:nth-of-type(2):after{
-    content:"192";
+    content:"JEŠTĚ xxx DNŮ";
     text-indent: 0;
 	line-height: normal;
 	font-size:14px;
@@ -65,107 +65,107 @@
 }
 
 .customization3_edit-booking_header_logout:after{
-    content:"Missing 6";
+    content:"Odhlásit se z odběru";
 	font-size:14px;
 }
 
 .customization3_edit-booking_main_booking-date_label:after{
-    content:"194";
+    content:"Rezervace dne";
 	font-size:13px;
 }
 
 .booking-status--paid.customization3_edit-booking_main_booking-status:after{
-    content:"197";
+    content:"Přihlášení ukončeno";
 	font-size:16px;
 }
 
 .customization3_edit-booking_main_event_dates:after{
-    content:"234";
+    content:"sobota, 5. listopadu, 16:30 hod. až 6. listopadu 2022, 03:00 hod.";
 	font-size:13px;
 }
 
 .customization3_tab-group_tab:nth-of-type(1) .customization3_tab-group-mobile_tab_label_text:after{
-    content:"201";
+    content:"Účastník";
 	font-size:14px;
 }
 
 .customization3_tab-group_tab:nth-of-type(2) .customization3_tab-group-mobile_tab_label_text:after{
-    content:"221";
+    content:"Rezervující";
 	font-size:14px;
 }
 
 .customization3_tab-group_tab:nth-of-type(3) .customization3_tab-group-mobile_tab_label_text:after{
-    content:"225";
+    content:"Rezervace";
 	font-size:14px;
 }
 
 .customization3_tab-group_tab:nth-of-type(4) .customization3_tab-group-mobile_tab_label_text:after{
-    content:"233";
+    content:"AKCE";
 	font-size:14px;
 }
 
 .customization2_attendee-1 .customization3_attendee_ticket-category_title:after{
-    content:"228";
+    content:"Přijdu sám";
 	font-size:14px;
 }
 
 .customization2_attendee-2 .customization3_attendee_ticket-category_title:after{
-    content:"230";
+    content:"Přijdu s doprovodem";
 	font-size:14px;
 }
 
 .customization2_booker_contact-data_headline:after{
-    content:"222";
+    content:"Kontaktní osoba";
 	font-size:16px;
 }
 
 .customization3_invoice-box_header_title:after{
-    content:"226";
+    content:"Rekapitulace";
 	font-size:16px;
 }
 
 .customization3_invoice-box_category_label:after{
-    content:"227";
+    content:"OZNAČENÍ";
 	font-size:14px;
 }
 
 .customization3_invoice-box_quantity_label:after{
-    content:"229";
+    content:"Počet";
 	font-size:14px;
 }
 
 .customization3_invoice-box_table-body tr:nth-of-type(1) .customization3_invoice-box_category_value .grid-element__value:after{
-    content:"228";
+    content:"Přijdu sám";
 	font-size:13px;
 }
 
 .customization3_invoice-box_table-body tr:nth-of-type(2) .customization3_invoice-box_category_value .grid-element__value:after{
-    content:"230";
+    content:"Přijdu s doprovodem";
 	font-size:13px;
 }
 
 .customization3_edit-booking_event_dates:after{
-    content:"234";
+    content:"sobota, 5. listopadu, 16:30 hod. až 6. listopadu 2022, 03:00 hod.";
 	font-size:14px;
 }
 
 .customization3_edit-booking_event_organizer > div:first-of-type > div:first-of-type .data-item__label:after {
-	content:"233";
+	content:"AKCE";
 	font-size: 13px;
 }
 
 .organizer__name.data-item__value:after {
-	content:"237";
+	content:"Posádka Progroup Space";
 	font-size: 16px;
 }
 
 .event__contact.data-item .data-item__label:after{
-	content:"239";
+	content:"Kontakt";
 	font-size: 13px;
 }
 
 .terms__label:after{
-	content:"242";
+	content:"Podmínky rezervace";
 	font-size: 13px;
 }
 
