--- a/customizations/organization/15493/Progroup Translation/03_CZ/Intern/page1.css
+++ b/customizations/organization/15493/Progroup Translation/03_CZ/Intern/page1.css
@@ -18,17 +18,17 @@ vv-booking-editing-prompt button {
 }
 
 ul.event-categories li:nth-of-type(1) .customization-category-name:after {
-    content: "49";
+    content: "Přijdu sám";
     font-size: 1rem;
 }
 
 ul.event-categories li:nth-of-type(2) .customization-category-name:after {
-    content: "50";
+    content: "Přijdu s doprovodem";
     font-size: 1rem;
 }
 
 ul.event-categories:after {
-    content: "51";
+    content: "Ty a tvůj doprovod jste srdečně zváni. Účast je bezplatná.";
     font-size: 16px;
     display: block;
     margin: 20px;
@@ -37,19 +37,19 @@ ul.event-categories:after {
 }
 
 .customization-encrypted-connection:after {
-    content: "53";
+    content: "Šifrované připojení";
     font-size:14px
 }
 
 vv-booking-editing-prompt span:after {
-    content: "54";
+    content: "Jsi již přihlášen? Zde přejdeš k Přihlášení.";
     text-indent: 0;
     font-size: 14px;
     line-height: normal;
 }
 
 vv-booking-editing-prompt button:after {
-    content: "54";
+    content: "Jsi již přihlášen? Zde přejdeš k Přihlášení.";
     font-size: 14px;
     line-height: normal;
     text-indent: 0;
