--- a/customizations/organization/15493/Progroup Translation/05_FR/Extern/bookingportal.css
+++ b/customizations/organization/15493/Progroup Translation/05_FR/Extern/bookingportal.css
@@ -49,15 +49,7 @@
 }
 
 .customization3_edit-booking_header_days-to-go vv-text:nth-of-type(1):after{
-    content:"ENCORE";
-    text-indent: 0;
-	line-height: normal;
-	font-size:14px;
-    display:block;
-}
-
-.customization3_edit-booking_header_days-to-go vv-text:nth-of-type(2):after{
-    content:"JOURS";
+    content:"JOURS RESTANTS";
     text-indent: 0;
 	line-height: normal;
 	font-size:14px;
@@ -175,6 +167,15 @@
 .customization3_edit-booking_header_days-to-go p{
 	text-indent: -9999px;
 	line-height: 0;
+}
+
+.customization3_invoice-box_quantity_value .grid-element__label {
+    font-size: 0;
+}
+
+.customization3_invoice-box_quantity_value .grid-element__label:after {
+    content: "Quantité";
+    font-size: 12px;
 }
 
 .booking-editing-auth vv-button button,
