--- a/customizations/organization/15493/Progroup Translation/05_FR/Extern/page2.css
+++ b/customizations/organization/15493/Progroup Translation/05_FR/Extern/page2.css
@@ -63,10 +63,8 @@
 .customization2_attendee_contact-data_first-name_error:after,
 .customization2_attendee_contact-data_salutation_error:after{
     content: "Veuillez remplir le formulaire";
-    text-indent: 0;
-    display: block;
-    line-height: initial;
-    margin-top: -15px;
+    font-size: 12px;
+    margin-top: 0px;
 }
 
 .customization2_attendee-1 .customization2_attendee_title:after {
