--- a/customizations/organization/15493/Progroup Translation/05_FR/Intern/page3.css
+++ b/customizations/organization/15493/Progroup Translation/05_FR/Intern/page3.css
@@ -42,7 +42,7 @@ p.ew-confirmation__organizer-contact > span:nth-of-type(1) {
 }
 
 p.ew-confirmation__organizer-contact span:nth-of-type(1):after {
-	content: "En cas de questions, tu peux t'adresser à tout moment à events@progroup.ag.";
+	content: "En cas de questions, tu peux t'adresser à tout moment à";
 	text-indent: 0;
 	line-height: normal;
 	font-size: 14px;
