--- a/customizations/organization/15493/Progroup Translation/04_EN/Intern/page3.css
+++ b/customizations/organization/15493/Progroup Translation/04_EN/Intern/page3.css
@@ -42,7 +42,7 @@ p.ew-confirmation__organizer-contact > span:nth-of-type(1) {
 }
 
 p.ew-confirmation__organizer-contact span:nth-of-type(1):after {
-	content: "If you have any questions at any time, please e-mail events@progroup.ag";
+	content: "If you have any questions at any time, please e-mail";
 	text-indent: 0;
 	line-height: normal;
 	font-size: 14px;
