--- a/customizations/organization/15493/Progroup Translation/06_IT/Intern/page3.css
+++ b/customizations/organization/15493/Progroup Translation/06_IT/Intern/page3.css
@@ -42,7 +42,7 @@ p.ew-confirmation__organizer-contact > span:nth-of-type(1) {
 }
 
 p.ew-confirmation__organizer-contact span:nth-of-type(1):after {
-	content: "In caso di domande puoi sempre rivolgerti a events@progroup.ag";
+	content: "In caso di domande puoi sempre rivolgerti a";
 	text-indent: 0;
 	line-height: normal;
 	font-size: 14px;
