--- a/customizations/organization/15493/Progroup Translation/03_CZ/Intern/page3.css
+++ b/customizations/organization/15493/Progroup Translation/03_CZ/Intern/page3.css
@@ -42,7 +42,7 @@ p.ew-confirmation__organizer-contact > span:nth-of-type(1) {
 }
 
 p.ew-confirmation__organizer-contact span:nth-of-type(1):after {
-	content: "V případě dotazů se kdykoliv obrať na events@progroup.ag obrátit";
+	content: "V případě dotazů se kdykoliv obraťte na";
 	text-indent: 0;
 	line-height: normal;
 	font-size: 14px;
