--- a/customizations/organization/15493/Progroup Translation/04_EN/Intern/bookingportal.css
+++ b/customizations/organization/15493/Progroup Translation/04_EN/Intern/bookingportal.css
@@ -16,7 +16,7 @@
 }
 
 .booking-editing-auth vv-input[name="bookingId"] + vv-show-errors .error-text:after {
-    content:"Missing 4";
+    content:"Please enter a valid booking number";
 	font-size:12px;
 }
 
@@ -29,7 +29,7 @@
 }
 
 .booking-editing-auth vv-input[name="email"] + vv-show-errors .error-text:after {
-    content:"Missing 5";
+    content:"Please enter a valid email address";
 	font-size:12px;
 }
 
@@ -65,7 +65,7 @@
 }
 
 .customization3_edit-booking_header_logout:after{
-    content:"Missing 6";
+    content:"Unsubscribe";
 	font-size:14px;
 }
 
