--- a/customizations/organization/15493/Progroup Translation/04_EN/Intern/page2.css
+++ b/customizations/organization/15493/Progroup Translation/04_EN/Intern/page2.css
@@ -55,7 +55,7 @@
 .customization2_attendee_contact-data_last-name_error:after,
 .customization2_attendee_contact-data_first-name_error:after,
 .customization2_attendee_contact-data_salutation_error:after{
-    content: "Missing 3";
+    content: "Please fill in";
     font-size: 12px;
     margin-top: 0px;
 }
@@ -181,7 +181,7 @@
 }
 
 .customization2_attendee_further-data_custom-question-4 .customization2_attendee_further-data_custom-question_label:after{
-    content: "Missing 1";
+    content: "I need a hotel room";
     font-size: 14px;
 }
 
@@ -226,27 +226,27 @@
 }
 
 .customization2_attendee_edit-action_cancel:after {
-    content: "Missing 2";
+    content: "Cancel";
     font-size: 16px;
 }
 
 .customization2_attendee-2 .customization2_attendee_further-data_custom-question-1 .customization2_attendee_further-data_custom-question_label:after{
-    content: "330";
+    content: "My guest’s choice for the intergalactic dinner";
     font-size: 14px;
 }
 
 .customization2_attendee-2 .customization2_attendee_further-data_custom-question-1 .customization2_attendee_further-data_custom-question_radio-line-1 p.vv-control-label:after{
-    content: "331";
+    content: "Meat menu";
     font-size: 14px;
 }
 
 .customization2_attendee-2 .customization2_attendee_further-data_custom-question-1 .customization2_attendee_further-data_custom-question_radio-line-2 p.vv-control-label:after{
-    content: "332";
+    content: "Vegetarian menu";
     font-size: 14px;
 }
 
 .customization2_attendee-2 .customization2_attendee_further-data_custom-question-2 .customization2_attendee_further-data_custom-question_label:after{
-    content: "334";
+    content: "Food intolerances (optional)";
     font-size: 14px;
 }
 
