--- a/customizations/organization/15493/Progroup Translation/05_FR/Intern/page1.css
+++ b/customizations/organization/15493/Progroup Translation/05_FR/Intern/page1.css
@@ -42,14 +42,14 @@ ul.event-categories:after {
 }
 
 vv-booking-editing-prompt span:after {
-    content: "Déjà connecté(e)? Tu peux te connecter ici.";
+    content: "Déjà connecté(e)?";
     text-indent: 0;
     font-size: 14px;
     line-height: normal;
 }
 
 vv-booking-editing-prompt button:after {
-    content: "Déjà connecté(e)? Tu peux te connecter ici.";
+    content: "Tu peux te connecter ici.";
     font-size: 14px;
     line-height: normal;
     text-indent: 0;
