--- a/customizations/organization/15493/Progroup Translation/07_PL/Intern/page2.css
+++ b/customizations/organization/15493/Progroup Translation/07_PL/Intern/page2.css
@@ -94,7 +94,7 @@
 }
 
 .customization2_attendee_contact-data_last-name_label:after {
-    content: "76";
+    content: "Nazwisko";
     font-size: 14px;
 }
 
