--- a/customizations/organization/15493/Progroup Translation/07_PL/Intern/page2.css
+++ b/customizations/organization/15493/Progroup Translation/07_PL/Intern/page2.css
@@ -156,7 +156,7 @@
 }
 
 .customization2_attendee_contact-data_email:before {
-    content: "94";
+    content: "Pozostałe informacje";
     display: block;
     margin-top: 24px;
     padding-bottom: 16px;
