--- a/customizations/organization/15493/Progroup Translation/06_IT/Intern/page2.css
+++ b/customizations/organization/15493/Progroup Translation/06_IT/Intern/page2.css
@@ -173,7 +173,7 @@ vv-questions .customization2_attendee_further-data_custom-question-1 .customizat
 }
 
 vv-questions .customization2_attendee_further-data_custom-question-2 .customization2_attendee_further-data_custom-question_label:after{
-    content: "Stabilimento/Sito";
+    content: "Stabilimento/sito";
     font-size: 14px;
 }
 
