--- a/customizations/organization/15493/Progroup Translation/06_IT/Intern/page2.css
+++ b/customizations/organization/15493/Progroup Translation/06_IT/Intern/page2.css
@@ -197,7 +197,7 @@ vv-questions .customization2_attendee-state_edit .customization2_attendee-2 .cus
     font-size: 14px;
 }
 
-vv-questions .customization2_attendee-state_edit .customization2_attendee-state_edit .customization2_attendee_further-data_custom-question-5 .customization2_attendee_further-data_custom-question_radio-line-1 p.vv-control-label:after{
+vv-questions .customization2_attendee-state_edit .customization2_attendee_further-data_custom-question-5 .customization2_attendee_further-data_custom-question_radio-line-1 p.vv-control-label:after{
     content: "Menù di pesce";
     font-size: 14px;
 }
